Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1319

MDT getattr stats not getting updated

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.3.0, Lustre 2.1.2
    • Lustre 2.0.0, Lustre 2.1.0, Lustre 2.2.0, Lustre 2.3.0, Lustre 2.1.1, Lustre 2.1.2
    • None
    • 3
    • 4638

      The MDT getattr statistic in procfs is not incremented when clients perform stat operations on files. For example,

      $ echo clear | sudo tee /proc/fs/lustre/mdt/lustre-MDT0000/md_stats
      clear
      $ grep getattr /proc/fs/lustre/mdt/lustre-MDT0000/md_stats
      $ sudo touch /mnt/lustre/test
      $ ls -l /mnt/lustre/test
      rw-rr- 1 root root 0 Apr 12 17:42 /mnt/lustre/test
      $ grep getattr /proc/fs/lustre/mdt/lustre-MDT0000/md_stats
      $

      Should getattr get incremented in this case?

            ys Yang Sheng
            nedbass Ned Bass (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: